# cnmea

./: .gitignore  CMakeLists.txt  Makefile  README.md  cnmea.cpp
.github/workflows/: ci.yml  release.yml
cmake/: Config.cmake.in
cnmea/include/cnmea/: cnmea.h  gsv.h  p_tools.h  tools.h  types.h  zda.h
cnmea_usage/: main.cpp
example/: main.cpp
include/cnmea/: cnmea.h  gga.h  gll.h  gsa.h  gsv.h  p_tools.h  print.h  rmc.h  tools.h  types.h  vtg.h  zda.h
include/cnmea/detail/: parse_longitude.h  parse_speed.h  parse_utc_date.h  parse_utc_time.h  split.h  tokenize.h
pepe/cnmea/: json.h  parse.h  types.h
test/: main.cpp
